2007-08-30  Anupam Sengupta  <anupamsg@gmail.com>

	* test/test_binarytree.rb (TC_BinaryTreeTest::test_swap_children):
	Added a test case for the children swap function.

	* lib/tree/binarytree.rb (Tree::BinaryTreeNode::swap_children):
	Added new function to swap the children. Other minor changes in
	comments and code.

2007-07-18  Anupam Sengupta  <anupamsg@gmail.com>

	* lib/tree/binarytree.rb (Tree::BinaryTreeNode::leftChild /
	rightChild): Minor cosmetic change on the parameter name.

	* test/testbinarytree.rb (TC_BinaryTreeTest::test_isLeftChild):
	Minor syntax correction.

	* lib/tree.rb (Tree::TreeNode::depth): Added a tree depth
	computation method.
	(Tree::TreeNode::breadth): Added a tree breadth method.

	* test/testtree.rb (TC_TreeTest::test_depth/test_breadth): Added a
	test for the depth and breadth method.

	* lib/tree/binarytree.rb (Tree::BinaryTreeNode::is*Child):
	Added tests for determining whether a node is a left or right
	child.

	* test/testbinarytree.rb: Added the test cases for the binary tree
	implementation.
	(TC_BinaryTreeTest::test_is*Child): Added tests for right or left
	childs.

	* lib/tree/binarytree.rb: Added the binary tree implementation.

2007-07-17  Anupam Sengupta  <anupamsg@gmail.com>

	* lib/tree.rb (Tree::TreeNode::parentage): Renamed 'ancestors'
	method to 'parentage' to avoid clobbering Module.ancestors

2007-07-16  Anupam Sengupta  <anupamsg@gmail.com>

	* Rakefile: Added an optional rtags task to generate TAGS file for
	Emacs.

	* lib/tree.rb (Tree::TreeNode): Added navigation methods for
	siblings and children. Also added some convenience methods.

2007-07-08  Anupam Sengupta  <anupamsg@gmail.com>

	* Rakefile: Added a developer target for generating rdoc for the
	website.

2007-06-24  Anupam Sengupta  <anupamsg@gmail.com>

	* test/testtree.rb, lib/tree.rb: Added the each_leaf traversal method.

	* README: Replaced all occurrances of LICENSE with COPYING
	and lowercased all instances of the word 'RubyTree'.
