@@ -1,4 +1,4 @@
-= Rubytree 0.4.1
+= Rubytree 0.4.2
 
 (c) 2006, 2007 Anupam Sengupta
   http://rubytree.rubyforge.org
